--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@nextui-org/snippet": "2.0.41",
     "@nextui-org/switch": "2.0.33",
     "@nextui-org/system": "2.2.5",
-    "@nextui-org/theme": "2.2.9",
+    "@nextui-org/theme": "^2.2.9",
     "@react-aria/visually-hidden": "3.8.12",
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
@@ -29,6 +29,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.0.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.3"
