--- a/package.json
+++ b/package.json
@@ -16,17 +16,24 @@
     "@nextui-org/kbd": "2.0.33",
     "@nextui-org/link": "2.0.34",
     "@nextui-org/navbar": "2.0.36",
+    "@nextui-org/react": "^2.4.6",
     "@nextui-org/shared-icons": "^2.0.9",
     "@nextui-org/snippet": "2.0.41",
     "@nextui-org/switch": "2.0.33",
     "@nextui-org/system": "2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "@react-aria/visually-hidden": "3.8.12",
+    "apexcharts": "^3.51.0",
+    "chart.js": "^4.4.3",
     "clsx": "2.1.1",
+    "country-flag-icons": "^1.5.13",
     "framer-motion": "~11.1.1",
     "i18next": "^23.12.2",
     "js-cookie": "^3.0.5",
     "react": "18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "18.3.1",
     "react-i18next": "^15.0.0",
     "react-player": "^2.16.0",
